[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/ArcadeFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Utility/GameOverScreen.gd" type="Script" id=2]
[ext_resource path="res://Main.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menus/MainMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/Music/broken-Defekt_Maschine.wav" type="AudioStream" id=5]


[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.282353, 0.0705882, 0.0705882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.172549, 0.0431373, 0.0431373, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.372549, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GameOverScreen" type="Node2D"]
script = ExtResource( 2 )
mainGameScene = ExtResource( 3 )
mainMenu = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.592157, 0.133333, 0.133333, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_right = 974.0
margin_bottom = 580.0

[node name="game over" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 924.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "YOU DIED"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 924.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 924.0
margin_bottom = 90.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "New Game"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 924.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="mainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_right = 924.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Main Menu"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 924.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="quitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4"]
margin_right = 924.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit"

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/mainMenuButton" to="." method="_on_mainMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4/quitButton" to="." method="_on_quitButton_pressed"]
